<resources>
  <string name="app_name">app_20250730</string>
  <string name="btn_move1">DetailActivity로 단순 화면 이동</string>
  <string name="btn_move2">직접 만든 UserActivity로 단순 화면 이동</string>
  <string name="btn_move3">ParamActivity로 매개변수와 함께 이동</string>
  <string name="btn_move4">startActivityForResult() 로 데이터 돌려받기</string>
  <string name="btn_move5">ActivityResultLauncher 로 데이터 돌려받기</string>
  <string name="tv_calculator_title">CalculatorActivity 화면</string>
</resources>